--- a/HTML & CSS Website Project/style.css
+++ b/HTML & CSS Website Project/style.css
@@ -29,7 +29,7 @@
      font-family: Arial;
      padding-left: auto;
      float: left;
-     padding-top: 20px;
+     padding-top: 22px;
 }
 .menu {
      width: 400px;
@@ -52,7 +52,7 @@ ul li {
 
 ul li a{
      text-decoration: none;
-     color: aliceblue;
+     color: #fff;
      font-family: Arial;
      font-weight: bold;
      transition: 0.4s ease-in-out;
@@ -76,7 +76,7 @@ ul li a:hover{
      background: transparent; 
      border: 1px solid #ff6569; 
      margin-top: 13px;
-     color: aliceblue;
+     color: #fff;
      border-right: none;
      font-size: 16px;
      float: left;
@@ -91,7 +91,7 @@ ul li a:hover{
      background: #ff6569;
      border: 2px solid #ff6569;
      margin-top: 13px;
-     color: aliceblue;
+     color: #fff;
      font-size: 15px;
      border-bottom-right-radius: 5px;
      border-top-right-radius: 5px;
@@ -115,6 +115,7 @@ ul li a:hover{
 
 .content .par {
      padding-left: 20px;
+     padding-top: 8px;
      padding-bottom: 25px;
      font-family: Arial;
      letter-spacing: 1.2px;
@@ -123,7 +124,7 @@ ul li a:hover{
 
 .content h1 {
      font-family: 'Times New Roman';
-     font-size: 50px;
+     font-size: 49px;
      padding-left: 20px;
      margin-top: 9%;
      letter-spacing: 2px;
@@ -144,8 +145,10 @@ ul li a:hover{
 
 .content .cn a {
     text-decoration: none;
-    color: black;
+    color:black;
+    font-size: 15px;
     transition: .3s ease;
+    font-weight: bold;
 }
 
 .cn:hover {
@@ -156,4 +159,128 @@ ul li a:hover{
      color: #ff6569;
      font-size: 60px;
 }
+
+.form {
+     width: 250px;
+     height: 380px;
+     background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+     position: absolute;
+     top: -20px;
+     left: 890px;
+     border-radius: 10px;
+     padding: 25px;
+}
+
+.form h2 {
+     width: 230px;
+     font-family: sans-serif;
+     text-align: center;
+     color: #ff6569;
+     font-size: 22px;
+     background-color: #fff;
+     border-radius: 10px;
+     margin: 2px;
+     padding: 8px;
+}
+
+.form input {
+     width: 240px;
+     height: 35px;
+     background: transparent;
+     border-bottom: 1px solid #ff6569;
+     border-top: none;
+     border-right: none;
+     border-left: none;
+     color: #fff;
+     font-size: 15px;
+     letter-spacing: 1px;
+     margin-top: 30px;
+     font-family: sans-serif;
+}
      
+.from input:focus {
+     outline: none;
+}
+
+::placeholder {
+     color:#fff;
+     font-family: Arial;    
+}
+
+.btnn {
+     width: 250px;
+     height: 40px;
+     background: #ff6569;
+     border: none;
+     margin-top: 30px;
+     font-size: 18px;
+     border-radius: 10px;
+     cursor: pointer;
+     color: #fff;
+     transition: 0.4s ease;
+}
+
+.btnn:hover {
+     background: #fff;
+     color: #ff6569;
+}
+
+.btnn a{
+     text-decoration: none;
+     color: black;
+     font-weight: bold;
+}
+
+.form .link {
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: 17px;
+     padding-top: 20px;
+     text-align: center;
+}
+
+.form .link a {
+     text-decoration: none;
+     color: #ff6569;
+}
+
+.liw {
+     padding-top: 15px;
+     padding-bottom: 10px;
+     text-align: center;
+}
+
+.icons a {
+     text-decoration: none;
+     color: #fff;
+}
+
+.icons ion-icon {
+     color: #fff;
+     font-size: 30px;
+     padding-left: 14px;
+     padding-top: 5px;
+     transition: 0.3s ease;
+}
+
+.icons ion-icon:hover {
+     color: #ff6569;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
