--- a/Funny Login Page Project/style.css
+++ b/Funny Login Page Project/style.css
@@ -1,6 +1,11 @@
+body {
+     background-color: #4b0617;
+}
+
 .signupBox {
      width: 80%;
      max-width: 370px;
+     background-color: white;
      border: 1px solid rgba(116, 116, 116, 0.76);
      position: absolute;
      top: 50%;
@@ -90,7 +95,7 @@
 
 .submit-div h1 {
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+}  
 
 
 
